tests/positive/pr115_declare_terminator.safe
package pr115_local_decl_terminator

   type counter is range 0 to 10;

   function compute returns counter

      var temp : counter = 1
      return temp


