tests/negative/neg_pr115_var_declare_item.safe
package Neg_PR115_Var_Declare_Item

   type Counter is range 0 to 10;

   function Broken returns Counter

      declare
         var Temp : Counter = 0;
      begin
         return Temp;
      end;



